# Atelier_Meteo

./: .gitignore  README.md  pyproject.toml
Documents/: Q_descriptif_champs_autres-parametres.csv  mail.txt
src/meteo/: meteo.py
